manifests/apps/kong-echo/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kong-echo
  namespace: kong-demo
  labels:
    app: kong-echo
    app.kubernetes.io/name: kong-echo
    app.kubernetes.io/part-of: kong-community-crc-lab
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kong-echo
  template:
    metadata:
      labels:
        app: kong-echo
        app.kubernetes.io/name: kong-echo
    spec:
      containers:
        - name: http-echo
          image: hashicorp/http-echo:1.0
          command: ["/http-echo"]
          args:
            - "-listen=:5678"
            - "-text=Respuesta recibida a traves de Kong Community"
          ports:
            - name: http
              containerPort: 5678
              protocol: TCP
