manifests/apps/kong-echo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kong-echo
  namespace: kong-demo
  labels:
    app: kong-echo
    app.kubernetes.io/part-of: kong-community-crc-lab
spec:
  selector:
    app: kong-echo
  ports:
    - name: http
      port: 5678
      targetPort: http
      protocol: TCP
